Fix control panel button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,6 @@ body {
   /*border: 1px solid red;*/
 }
 
-
-
 #game{
   width: 100%;
   height: 500px;
@@ -65,9 +63,23 @@ body {
 }
 
 #control-panel{
-  width: 80%;
+  width: 100%;
   margin: 0 auto 10px auto;
-  /*border: 1px solid red;*/
+}
+
+#controls{
+  width: 100%;
+  margin: 0 auto 10px auto;
+}
+
+#controls>h1{
+  margin-top: 0px;
+  text-align: center;
+}
+
+.control-row{
+  width: 215px;
+  margin: 10px auto;
 }
 
 button{
@@ -85,18 +97,7 @@ button:active{
 
 #count{
   display: inline-block;  
-  margin-right: 10px;
-}
-
-#start{
-  display: inline-block;
-  width: 50px;
-  margin-right: 10px;
-}
-
-#strict{
-  display: inline-block;
-  width: 50px;
+  margin-right: 20px;  
 }
 
 #count-display{  
@@ -116,8 +117,19 @@ button:active{
   opacity: 0.10;
 }
 
+#start{
+  display: inline-block;
+  width: 50px;
+  margin-right: 20px;
+}
+
 #start-btn{  
   background-color: red;
+}
+
+#strict{
+  display: inline-block;
+  width: 50px;
 }
 
 #strict-btn{
@@ -139,8 +151,9 @@ button:active{
 }
 
 #on{
-  display: inline-block;
-  width: 500px;  
+  /*display: inline-block;*/
+  width: 115px;  
+  margin-left: 50px;
 }
 
 #on-btn-container{
@@ -182,6 +195,10 @@ button:active{
     left: 150px;
     top: 150px;
     border: 10px solid black;
+  }
+  #controls{
+    width: 100%;
+    top: 80px;
   }
   .panel{
     width:325px;
